# skyviper_ros

./: README.md
ardupilot_gazebo/: CMakeLists.txt  README.md
ardupilot_gazebo/launch/: iris_world.launch  mavros_optitrack.launch
ardupilot_gazebo/src/: mavros_control.py  mavros_control2.py  mavros_control3.py  mavros_control4.py  mdpOp.py  nextwaypoint.py  pol.py  set_origin.py  testingMDP.py  waypointgenerator.py
aruco_mapping/data/: sv_bl.ini  sv_gripen.ini  sv_rafale.ini
aruco_mapping/include/: aruco_mapping.h
aruco_mapping/launch/: aruco_config.rviz  aruco_mapping.launch  aruco_mapping_sv.launch
aruco_mapping/src/: aruco_mapping.cpp
exploring_aruco/aruco_marker_detection/: CMakeLists.txt  aruco_marker_detector.cpp  ocam_header.h
exploring_aruco/aruco_marker_generation/: CMakeLists.txt  aruco_marker_generator.cpp  readme
kalmanfilter/: CMakeLists.txt  package.xml
kalmanfilter/src/: kalmanfilter.cpp  kalmanfilter.h  kalmanfilter_node.cpp
local_position_publisher/: CMakeLists.txt  package.xml
local_position_publisher/launch/: local_position_publisher.launch
local_position_publisher/src/: local_position_publisher_node.cpp
plot/: 2018-09-26-20-04-28.bag  compareData.py  local_position.txt  mocappos_plot.py  skyviper_plot.py
plot/RzUnchanged1/: local_position.txt  mocap_position.txt  skyviper_plot.py
plot/RzUnchanged2/: local_position.txt  mocap_position.txt
plot/reasonablePerformance/: local_position.txt  mocap_position.txt
pose_publisher/: CMakeLists.txt  package.xml
pose_publisher/data/: cam_sv.yaml  cam_sv_bl.yaml  cam_sv_gripen.yaml
pose_publisher/launch/: pose_publisher.launch
pose_publisher/src/: kalman_filter.cpp  pose_publisher.cpp  pose_publisher.h  pose_publisher_node.cpp
pose_publisher_single/: CMakeLists.txt  package.xml
skyviper_capture_images/: CMakeLists.txt  package.xml
skyviper_capture_images/launch/: skyviper_cam.launch  skyviper_rviz.launch
skyviper_capture_images/rviz/: snare.rviz
skyviper_capture_images/src/: capture_images_node.cpp
(+8 files in other folders)
